--- a/docs/_posts/dive-down/2022-07-18-3d.md
+++ b/docs/_posts/dive-down/2022-07-18-3d.md
@@ -1,6 +1,111 @@
 ---
-title: "3D design"
+title: "Modeling Glasses"
 category: dive-down
 permalink: /dive-down/3d/
+toc: true
 ---
-Test 3D
+In order to build the frame of our glasses we first designed them using
+Fusion360 before ultimately uploading them to PrucaSlicer in order to
+print them on basic 3d printers using PETG or PLA (types of plastic that
+come at a very low cost).
+
+To design custom glasses in 3d it is good to first find examples of
+already designed glasses on the internet or if you have any pair of
+glasses laying at home you can use those for an initial design.
+
+![]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image2.png)
+
+Once you’ve done that you will want to start adding features custom for
+your use into the design. In our case the main component of our glasses
+came from the transparent OLED display sitting at a little distance from
+our eyes. You can therefore see that in our first versions we already
+had a system to attach this feature to our glasses.
+
+![]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image4.png)
+
+## One print vs Multiple
+
+One question that may arise will printing your first parts is should you
+print the glasses all together or in separate parts? (Difference seen in
+the two neighboring pictures.) The truth is it will depend a lot on how
+high a quality your available printer can print. In our experience,
+since we only had access to quite basic printers, printing in plastic
+using a precision of 0.2 mm. There was very little that pushed us
+towards a full body print.
+
+What we did is we printed multiple smaller pieces that we would then
+screw or glue together. In doing so our prints were cleaner and overall
+had way more structural integrity.
+
+Once we knew how we wanted to build the general design of our glasses we
+started working on the different components that were making it up more
+closely. Indeed, it is very important to always have an overall view of
+what your end design should look like and how each part improves the
+overall design. That is also why it is important to work in synergy with
+the other parts of your team in order to achieve a fluidity between
+components. You need to know how big the electronic circuits are going
+to be in order to print their encasing\!
+
+
+## Our design
+
+![]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image6.png)
+
+We’ll now dive a bit more into the specifics of our design:
+
+We knew quite early what the general size of our different electronics
+would be and so we had quite early an idea of the encasing we would
+attach to it. Barring of course the update where all electronics would
+be fitted into a customized PCB. And this helped us in the designing of
+our other parts.
+
+## Adjusting pieces
+
+![]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image8.png)
+
+Every piece we printed multiple times, giving us time to adjust in order
+to make the design better keeping in the mind what we said about keeping
+an overall view of the glasses. As an example, the main piece of the
+glasses where the lenses usually are as well as the two “branches” going
+behind the ear were continuously developed for it to be as comfortable
+as possible. Trying to keep more area of surface with the nose and
+having a less pointy shape around the ears.
+
+## Some design flaws
+
+This is where a few of the major problem about these glasses started to
+show up mainly:
+
+Weight distribution and how each person has a different head
+
+Of course, the problem of weight distribution seems quite glaring: our
+components are simply not the same size. Therefore, we decided to put
+the battery and the screen on one side and the other major electronic
+components on the other. Making it at least somewhat of a more centered
+weight. In retrospect, it may have been better to split the Circuit
+board into two pieces in order to achieve a better balance overall.
+
+![]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image10.png)
+
+The other major roadblock we encountered was how everyone’s head is
+simply so different. When glasses would be a perfect fit for one, they
+would be way too big for another and smaller for a third. Usual glasses
+don’t suffer from this setback as much simply because their weight is
+very balanced, and they are just lighter in general. This implies that
+they can get away with having relatively straight glass branches
+(needing only minimum support from the ears). This remained and still is
+a knock to the current design. To overcome this, we would have had to
+either making a more modular pair of glasses (Everyone can adjust them
+based on their needs) or simply focusing on reducing the overall weight
+of the glasses.
+
+In conclusion, knowing this is only a proof a concept for a next
+generation of glasses. We have achieved just that. We have proved that
+such a concept is possible even at low cost however it would imply a
+careful rethink of components and adjusting some of the issues presented
+above.
+
+![]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image12.png)
+
+![A picture containing text, indoor, worktable, table Description
+automatically generated]({{ site.url }}{{ site.baseurl }}/assets/images/dive-down/d/image13.png)
