improved (added) SEO

--- a/docs/_posts/dive-down/2022-07-18-3d.md
+++ b/docs/_posts/dive-down/2022-07-18-3d.md
@@ -4,6 +4,7 @@ category: dive-down
 permalink: /dive-down/3d/
 toc: true
 ---
+{% raw %}{% seo %}{% endraw %}
 In order to build the frame of our glasses we first designed them using
 Fusion360 before ultimately uploading them to PrucaSlicer in order to
 print them on basic 3d printers using PETG or PLA (types of plastic that
