--- a/docs/_posts/dive-down/2022-07-18-hardware.md
+++ b/docs/_posts/dive-down/2022-07-18-hardware.md
@@ -5,6 +5,7 @@ permalink: /dive-down/hardware/
 toc: true
 toc_sticky: true
 ---
+{% raw %}{% seo %}{% endraw %}
 ## Parts choices
 
 The parts our project needed were mostly known from the get‐go. We needed some kind of
