--- a/docs/_posts/dive-down/2022-07-18-software.md
+++ b/docs/_posts/dive-down/2022-07-18-software.md
@@ -5,6 +5,7 @@ permalink: /dive-down/software/
 toc: true
 toc_sticky: true
 ---
+{% raw %}{% seo %}{% endraw %}
 ## Introduction
 
 In order to communicate with the glasses, we decided to make an android
